--- a/A1/memory_game/src/views/card.html
+++ b/A1/memory_game/src/views/card.html
@@ -1,3 +1,6 @@
+
+<import from="./card.css"></import>
+
 <div class="card">
  <!-- if the value "visible" is true, then the tag is shown. 
 "${symbol} prints the symbol" -->
